Capitalized bundle identifiers (org.playhaus.patchworks.* -> org.playhaus.Patchworks.*)
darcs-hash:20051009162739-5716c-efde9611681b1cca4179cb3a36613c010afca81e.gz

--- a/Importer Source/Resources/Info.plist
+++ b/Importer Source/Resources/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.playhaus.patchworks.importer</string>
+	<string>org.playhaus.Patchworks.importer</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleVersion</key>
