--- a/Application Source/Resources/Info.plist
+++ b/Application Source/Resources/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.playhaus.patchworks</string>
+	<string>org.playhaus.Patchworks</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
