--- a/Application Source/Resources/Patchworks Test-Info.plist
+++ b/Application Source/Resources/Patchworks Test-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Patchworks Test</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.playhaus.patchworks.test</string>
+	<string>org.playhaus.Patchworks.test</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
