Changed UTI of darcs patch proxy from net.darcs.patch.proxy to org.playhaus.Patchworks.darcs.patch.proxy
darcs-hash:20051010133352-5716c-522d2e15546d5ab0d3c8a91258ed0bce6f9f5600.gz

--- a/Importer Source/Resources/Info.plist
+++ b/Importer Source/Resources/Info.plist
@@ -37,7 +37,7 @@
 	<array>
 		<dict>
 			<key>UTTypeIdentifier</key>
-			<string>net.darcs.patch.proxy</string>
+			<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
 			<key>UTTypeConformsTo</key>
 			<array>
 				<string>public.item</string>
@@ -60,7 +60,7 @@
 			<string>MDImporter</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>net.darcs.patch.proxy</string>
+				<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
 			</array>
 		</dict>
 	</array>
