--- a/Application Source/Resources/Info.plist
+++ b/Application Source/Resources/Info.plist
@@ -17,7 +17,7 @@
 			<string>Viewer</string>
 			<key>LSItemContentTypes</key>
 			<array>
-				<string>net.darcs.patch.proxy</string>
+				<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
 			</array>
 			<key>NSDocumentClass</key>
 			<string>PWDarcsPatchProxyDocument</string>
@@ -54,7 +54,7 @@
 			<key>UTTypeIconFile</key>
 			<string>asdfasdf.icns</string>
 			<key>UTTypeIdentifier</key>
-			<string>net.darcs.patch.proxy</string>
+			<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
 			<key>UTTypeReferenceURL</key>
 			<string>http://darcs.net/</string>
 			<key>UTTypeTagSpecification</key>
