--- a/Application Source/Resources/Info.plist
+++ b/Application Source/Resources/Info.plist
@@ -9,7 +9,7 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
-				<string>darcspatchproxy</string>
+				<string>darcsPatchProxy</string>
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>Darcs Patch</string>
@@ -61,7 +61,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>darcspatchproxy</string>
+					<string>darcsPatchProxy</string>
 				</array>
 			</dict>
 		</dict>
