--- a/Importer Source/Resources/Info.plist
+++ b/Importer Source/Resources/Info.plist
@@ -47,7 +47,7 @@
 			<dict>
 				<key>public.filename-extension</key>
 				<array>
-					<string>darcspatchproxy</string>
+					<string>darcsPatchProxy</string>
 				</array>
 			</dict>
 		</dict>
