--- a/Importer Source/Resources/Info.plist
+++ b/Importer Source/Resources/Info.plist
@@ -2,14 +2,46 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeIdentifier</key>
+			<string>org.playhaus.patchworks.darcspatchproxy</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Darcs Patch</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>darcsPatchProxy</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
+	
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>MDImporter</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>org.playhaus.patchworks.darcspatchproxy</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>Patchworks</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>org.playhaus.Patchworks.importer</string>
+	<string>org.playhaus.patchworks.importer</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleVersion</key>
@@ -32,37 +64,5 @@
 	</dict>
 	<key>CFPlugInUnloadFunction</key>
 	<string></string>
-	
-	<key>UTImportedTypeDeclarations</key>
-	<array>
-		<dict>
-			<key>UTTypeIdentifier</key>
-			<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
-			<key>UTTypeConformsTo</key>
-			<array>
-				<string>public.item</string>
-				<string>public.content</string>
-			</array>
-			<key>UTTypeTagSpecification</key>
-			<dict>
-				<key>public.filename-extension</key>
-				<array>
-					<string>darcsPatchProxy</string>
-				</array>
-			</dict>
-		</dict>
-	</array>
-	
-	<key>CFBundleDocumentTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>MDImporter</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>org.playhaus.Patchworks.darcs.patch.proxy</string>
-			</array>
-		</dict>
-	</array>
 </dict>
 </plist>
