--- a/Shared Source/Resources/Shared Source Test-Info.plist
+++ b/Shared Source/Resources/Shared Source Test-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Shared Source Test</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.playhaus.Patchworks.shared-test</string>
+	<string>org.playhaus.patchworks.shared-test</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
