--- a/Common Build Configurations/Cocoa Test Suite Unit Tests.xcconfig
+++ b/Common Build Configurations/Cocoa Test Suite Unit Tests.xcconfig
@@ -2,7 +2,7 @@
 //  Cocoa Test Suite Unit Tests.xcconfig
 //  Default settings for the Unit Tests configuration for Cocoa test suite targets
 //  This build configuration is designed for use by tools such as darcs that
-//  run tests from a fresh directory. It avoids things like precompiled
+//  run tests from a fresh directory. It avoids things like precompiling
 //  headers.
 //
 //  Created by Jonathon Mah on 2005-12-16.
