--- a/Common Build Configurations/Cocoa Test Suite.xcconfig
+++ b/Common Build Configurations/Cocoa Test Suite.xcconfig
@@ -4,6 +4,8 @@
 //
 //  Created by Jonathon Mah on 2005-12-16.
 
+#include "10_4 Shared"
+
 
 WRAPPER_EXTENSION = octest
 INSTALL_PATH = "$(USER_LIBRARY_DIR)/Bundles"
